--- a/Front-End/index.html
+++ b/Front-End/index.html
@@ -131,7 +131,7 @@
                             * Camera feeds in the house - list
                             * Enable/Disable Motion sensor alarm
                         </p>
-                            <a href="#" class="btn btn-outline-danger">On/Off Sensor</a>
+                            <!-- <a href="#" class="btn btn-outline-danger">On/Off Sensor</a> -->
                             <a target="_blank" href="http://192.168.0.177/" class="btn btn-outline-primary">CCTV Live</a>
                             <a href="#" class="btn btn-primary disabled" id="motion-card-btn"
                                 onclick="alertAcknowledge('MOTION')">Alert OFF</a>
@@ -174,7 +174,7 @@
                                     * Last alert, Location of alert
 
                                 </p>
-                                <a href="#" class="btn btn-outline-primary">Enable/Disable Alarm</a>
+                                <!-- <a href="#" class="btn btn-outline-primary">Enable/Disable Alarm</a> -->
                                 <a href="#" class="btn btn-primary disabled" id="smoke-card-btn"
                                     onclick="alertAcknowledge('SMOKE')">Acknowledge Alert</a>
                             </div>
@@ -194,7 +194,7 @@
                                     * Last alert timestamp, area of house
                                     *
                                 </p>
-                                <a href="#" class="btn btn-outline-primary">Enable/Disable Alarm</a>
+                                <!-- <a href="#" class="btn btn-outline-primary">Enable/Disable Alarm</a> -->
                                 <a href="#" class="btn btn-primary disabled" id="flame-card-btn"
                                     onclick="alertAcknowledge('FLAME')">Acknowledge Alert</a>
                             </div>
